[gd_scene load_steps=34 format=3 uid="uid://ct8y3u6mrqjr"]

[ext_resource type="Texture2D" uid="uid://dogo7cx0jyft0" path="res://sprite/background/bldgs_back.png" id="1_0h1g6"]
[ext_resource type="Script" path="res://script/game_state_machine.gd" id="1_cv2ha"]
[ext_resource type="Texture2D" uid="uid://bowphvfenvvth" path="res://sprite/background/clouds_back.png" id="2_4itqu"]
[ext_resource type="Script" path="res://script/parallax_sprite_scale.gd" id="3_772me"]
[ext_resource type="Texture2D" uid="uid://dgwamwl8vy2sy" path="res://sprite/background/bldgs_mid.png" id="3_wt5tx"]
[ext_resource type="Texture2D" uid="uid://cusc844avgbjj" path="res://sprite/background/clouds_mid.png" id="4_htqwx"]
[ext_resource type="Texture2D" uid="uid://d1psxj6s8wui3" path="res://sprite/background/bldgs_front.png" id="5_xbq0l"]
[ext_resource type="Texture2D" uid="uid://dqsl8d8hmo6h" path="res://sprite/background/main.png" id="6_d8w1d"]
[ext_resource type="Texture2D" uid="uid://c761i3tkn46i7" path="res://sprite/background/clouds_front.png" id="7_ff34c"]
[ext_resource type="Script" path="res://script/player.gd" id="9_ejq5o"]
[ext_resource type="Texture2D" uid="uid://cryvuk2hpgm81" path="res://sprite/crow 64x64.png" id="10_wwn0w"]
[ext_resource type="Script" path="res://script/pillar_spawn_machine.gd" id="11_p7cnv"]
[ext_resource type="AudioStream" uid="uid://djefueu10ud8a" path="res://audio/sfx/flaps/flap_1.wav" id="11_qn4a8"]
[ext_resource type="AudioStream" uid="uid://duusc2n8nnaka" path="res://audio/sfx/flaps/flap_2.wav" id="12_avuh0"]
[ext_resource type="Script" path="res://script/game_manager.gd" id="12_rj5od"]
[ext_resource type="Theme" uid="uid://bcihif0mi53lh" path="res://resource/menu.tres" id="12_vjlor"]
[ext_resource type="AudioStream" uid="uid://bkxqkw8wwp145" path="res://audio/sfx/flaps/flap_3.wav" id="13_wrvs0"]
[ext_resource type="AudioStream" uid="uid://rdvu82s8kd4p" path="res://audio/sfx/flaps/flap_4.wav" id="14_3k6q4"]
[ext_resource type="AudioStream" uid="uid://bbj36t0idt1h5" path="res://audio/sfx/caws/caw_1.wav" id="15_yeqfo"]
[ext_resource type="AudioStream" uid="uid://cictmkqls3dx8" path="res://audio/sfx/caws/caw_2.wav" id="16_qkm3p"]
[ext_resource type="AudioStream" uid="uid://chvt0ax2h3v0l" path="res://audio/sfx/caws/caw_3.wav" id="17_6esw4"]
[ext_resource type="AudioStream" uid="uid://dnxt3jkxgjbot" path="res://audio/sfx/caws/caw_4.wav" id="18_lg101"]
[ext_resource type="AudioStream" uid="uid://cemn2rl86qlg6" path="res://audio/sfx/caws/caw_5.wav" id="19_0t2d8"]
[ext_resource type="Theme" uid="uid://6u6whwgiyxvv" path="res://resource/button-32x32.tres" id="21_0b7pq"]
[ext_resource type="AudioStream" uid="uid://8six3penfsmq" path="res://audio/sfx/button_press.wav" id="23_x0tlq"]

[sub_resource type="GDScript" id="GDScript_4pash"]
resource_name = "ParaBG"
script/source = "extends ParallaxBackground

func _ready() -> void:
	scroll_base_offset.x = randi() % 2000

func _process(delta: float) -> void:
	scroll_offset.x -= 20.0 * delta
"

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_abmoc"]

[sub_resource type="GDScript" id="GDScript_4fdoq"]
resource_name = "walls"
script/source = "extends Area2D

func _on_body_entered(_body: Node2D) -> void:
	if owner.current_state == GameStateMachine.GameState.RUNNING:
		owner.set_state(GameStateMachine.GameState.DEAD)
"

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6wsfg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_50no6"]
radius = 31.0
height = 92.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rlhh8"]
streams_count = 4
stream_0/stream = ExtResource("11_qn4a8")
stream_1/stream = ExtResource("12_avuh0")
stream_2/stream = ExtResource("13_wrvs0")
stream_3/stream = ExtResource("14_3k6q4")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bpcsc"]
streams_count = 5
stream_0/stream = ExtResource("15_yeqfo")
stream_1/stream = ExtResource("16_qkm3p")
stream_2/stream = ExtResource("17_6esw4")
stream_3/stream = ExtResource("18_lg101")
stream_4/stream = ExtResource("19_0t2d8")

[sub_resource type="GDScript" id="GDScript_a3asy"]
resource_name = "PauseButton"
script/source = "extends Button

@onready var audio: AudioStreamPlayer2D = $AudioStreamPlayer2D

func _on_pressed() -> void:
	audio.play()
	owner.set_state(GameStateMachine.GameState.PAUSED)
"

[node name="GameLoop" type="Node"]
process_mode = 3
script = ExtResource("1_cv2ha")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
process_mode = 1
follow_viewport_enabled = true
scroll_ignore_camera_zoom = true
script = SubResource("GDScript_4pash")

[node name="Back" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(1745, 2.08189e-12)

[node name="Buildings" type="Sprite2D" parent="ParallaxBackground/Back"]
scale = Vector2(0.660985, 0.5625)
texture = ExtResource("1_0h1g6")
centered = false
script = ExtResource("3_772me")

[node name="Clouds" type="Sprite2D" parent="ParallaxBackground/Back"]
scale = Vector2(0.660985, 0.5625)
texture = ExtResource("2_4itqu")
centered = false
script = ExtResource("3_772me")

[node name="Main" type="Sprite2D" parent="ParallaxBackground/Back"]
z_index = -51
scale = Vector2(0.660985, 0.5625)
texture = ExtResource("6_d8w1d")
centered = false
script = ExtResource("3_772me")

[node name="Middle" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(1745, 2.08189e-12)

[node name="Buildings" type="Sprite2D" parent="ParallaxBackground/Middle"]
scale = Vector2(0.660985, 0.5625)
texture = ExtResource("3_wt5tx")
centered = false
script = ExtResource("3_772me")

[node name="Clouds" type="Sprite2D" parent="ParallaxBackground/Middle"]
scale = Vector2(0.660985, 0.5625)
texture = ExtResource("4_htqwx")
centered = false
script = ExtResource("3_772me")

[node name="Front" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 1)
motion_mirroring = Vector2(1745, 2.08189e-12)

[node name="Buildings" type="Sprite2D" parent="ParallaxBackground/Front"]
scale = Vector2(0.660985, 0.5625)
texture = ExtResource("5_xbq0l")
centered = false
script = ExtResource("3_772me")

[node name="Clouds" type="Sprite2D" parent="ParallaxBackground/Front"]
scale = Vector2(0.660985, 0.5625)
texture = ExtResource("7_ff34c")
centered = false
script = ExtResource("3_772me")

[node name="PillarSpawnMachine" type="Node" parent="."]
process_mode = 1
script = ExtResource("11_p7cnv")

[node name="Timer" type="Timer" parent="PillarSpawnMachine"]
wait_time = 3.25
autostart = true

[node name="Despawn" type="Area2D" parent="PillarSpawnMachine"]
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PillarSpawnMachine/Despawn"]
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_abmoc")

[node name="Walls" type="Area2D" parent="."]
process_mode = 1
collision_layer = 8
input_pickable = false
monitorable = false
script = SubResource("GDScript_4fdoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_6wsfg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, 720)
shape = SubResource("WorldBoundaryShape2D_6wsfg")

[node name="Player" type="CharacterBody2D" parent="."]
process_mode = 1
top_level = true
position = Vector2(240, 408)
collision_mask = 14
script = ExtResource("9_ejq5o")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("10_wwn0w")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(3, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_50no6")

[node name="Flap" type="AudioStreamPlayer2D" parent="Player"]
stream = SubResource("AudioStreamRandomizer_rlhh8")

[node name="Caw" type="AudioStreamPlayer2D" parent="Player"]
stream = SubResource("AudioStreamRandomizer_bpcsc")

[node name="PauseButton" type="Button" parent="."]
process_mode = 1
offset_left = 15.0
offset_top = 15.0
offset_right = 65.0
offset_bottom = 65.0
theme = ExtResource("21_0b7pq")
action_mode = 0
text = "||"
script = SubResource("GDScript_a3asy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PauseButton"]
stream = ExtResource("23_x0tlq")
bus = &"Button Press"

[node name="GameManager" type="Node" parent="."]
process_mode = 1
script = ExtResource("12_rj5od")

[node name="Label" type="Label" parent="GameManager"]
offset_left = 224.0
offset_top = 83.0
offset_right = 264.0
offset_bottom = 147.0
theme = ExtResource("12_vjlor")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="PillarSpawnMachine/Timer" to="PillarSpawnMachine" method="_on_timer_timeout"]
[connection signal="area_entered" from="PillarSpawnMachine/Despawn" to="PillarSpawnMachine" method="_on_despawn_area_entered"]
[connection signal="body_entered" from="Walls" to="Walls" method="_on_body_entered"]
[connection signal="pressed" from="PauseButton" to="PauseButton" method="_on_pressed"]
[connection signal="timeout" from="DeathTimer" to="GameManager" method="_on_death_timer_timeout"]
